@@ -2,6 +2,7 @@ package com.fran.xmljson.utilidades;
 
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 import java.nio.charset.StandardCharsets;
@@ -19,7 +20,7 @@ public class InternetUtils {
 	 */
 	public static String readUrl(String web) {
 		try {
-			URL url = new URL(web);
+			URL url = new URI(web).toURL();
 			URLConnection uc = url.openConnection();
 			uc.setRequestProperty("User-Agent", "PostmanRuntime/7.20.1");
 			uc.connect();
@@ -37,7 +38,7 @@ public class InternetUtils {
 
 	public static String readUrl(String web, String token) {
 		try {
-			URL url = new URL(web);
+			URL url = new URI(web).toURL();
 			URLConnection uc = url.openConnection();
 			uc.setRequestProperty("User-Agent", "PostmanRuntime/7.20.1");
 			uc.setRequestProperty("X-Auth-Token", token);
@@ -55,7 +56,7 @@ public class InternetUtils {
 	
 	public static List<String> readUrlList(String web) {
 		try {
-			URL url = new URL(web);
+			URL url = new URI(web).toURL();
 			URLConnection uc = url.openConnection();
 			uc.setRequestProperty("User-Agent", "PostmanRuntime/7.20.1");
 			uc.connect();
@@ -73,7 +74,7 @@ public class InternetUtils {
 	
 	public static List<String> readUrlList(String web, String token) {
 		try {
-			URL url = new URL(web);
+			URL url = new URI(web).toURL();
 			URLConnection uc = url.openConnection();
 			uc.setRequestProperty("User-Agent", "PostmanRuntime/7.20.1");
 			uc.setRequestProperty("X-Auth-Token", token);
